forgot to add new files to src in git

--- a/JPADemo002/src/main/resources/templates/result.html
+++ b/JPADemo002/src/main/resources/templates/result.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<h1>Result</h1>
-    <p th:text="'id is: ' + ${dog.id}" />
+    <p th:text="'dog id is: ' + ${dog.id}" />
     <p th:text="'name is: ' + ${dog.name}" />
     <p th:text="'age is: ' + ${dog.age}" />
-    <a href="/greeting">Submit another message</a>
+    <a href="/adddog">Submit another message</a>
 </body>
 </html>
