--- a/JPADemo002/src/main/resources/templates/list.html
+++ b/JPADemo002/src/main/resources/templates/list.html
@@ -13,6 +13,8 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>Age</th>
+
         </tr>
         <tr th:each="count : ${counts}">
             <td th:text="${count.id}"></td>
