--- a/IMDB003/src/main/resources/templates/coincidenceinfo.html
+++ b/IMDB003/src/main/resources/templates/coincidenceinfo.html
@@ -1,10 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Getting Started: Handling Form Submission</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+            width: 100%;
+            border: 1px solid #ddd;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 16px;
+        }
+        h1, h2, div {
+            display: inline;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2
+        }
+    </style>
 </head>
 <body>
-$END$
+<h2>Gemeenschappelijke films</h2>
+
+
+    <div th:if="${not #lists.isEmpty(films)}">
+
+        <div >
+            <table class="table table-striped">
+                <tr th:each="film : ${films}">
+                    <td  th:text="${film.tconst}"></td>
+                    <td  th:text="${film.primaryTitle}"></td>
+                    <td  th:text="${film.startYear}"></td>
+                </tr>
+            </table>
+
+        </div>
+    </div>
+    <!-- ELSE -->
+    <div th:unless="${not #lists.isEmpty(films)}">
+        <h2>Geen gemeenschappelijke films gevonden.</h2>
+    </div>
 </body>
 </html>
