--- a/IMDB003/src/main/resources/templates/getactorinfo.html
+++ b/IMDB003/src/main/resources/templates/getactorinfo.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<h1>Retrieve information about actor</h1>
-    <form action="#" th:action="@{/getactorinfo}" th:object="${getstring}" method="post">
-        <p>Name: <input type="text" th:field="*{content}" /></p>
+    <form action="#" th:action="@{/getactorinfo}" th:object="${findactor}"    method="post">
+        <p>Name: <input type="text" th:field="*{name}" /></p>
+        <p>Has birthdate: <input type="text" th:field="*{hasBirthDate}" /></p>
         <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
     </form>
 </body>
