--- a/IMDB003/src/main/resources/templates/getfilminfo.html
+++ b/IMDB003/src/main/resources/templates/getfilminfo.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Getting Started: Handling Form Submission</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-
+<h1>Retrieve information about a film</h1>
+<form action="#" th:action="@{/getfilminfo}" th:object="${getstring}" method="post">
+    <p>Name: <input type="text" th:field="*{content}" /></p>
+    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+</form>
 </body>
 </html>
