--- a/imdb_heroku/src/main/resources/templates/getactorinfo.html
+++ b/imdb_heroku/src/main/resources/templates/getactorinfo.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/getactorinfo}" th:object="${param}" method="post">
-    <p>Message: <input type="text" th:field="*{content}" /></p>
+<form action="#" th:action="@{/getactorinfo}" th:object="${request}" method="post">
+    <p>Message: <input type="text" th:field="*{name}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
